bk_ida/gccida/g2/variable_section
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/variable_section/src/varasm.c:1074:6: error: use of undeclared identifier 'in_section_0'; did you mean 'in_section'?
if ( in_section_0 == in_const ) 
     ^~~~~~~~~~~~
     in_section
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/variable_section/src/varasm.c:205:3: note: 'in_section' declared here
} in_section = no_section;
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/variable_section/src/varasm.c:1078:6: error: use of undeclared identifier 'in_section_0'; did you mean 'in_section'?
if ( in_section_0 == in_data ) 
     ^~~~~~~~~~~~
     in_section
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/variable_section/src/varasm.c:205:3: note: 'in_section' declared here
} in_section = no_section;
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/variable_section/src/varasm.c:1082:1: error: use of undeclared identifier 'in_section_0'; did you mean 'in_section'?
in_section_0 = in_data; 
^~~~~~~~~~~~
in_section
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/variable_section/src/varasm.c:205:3: note: 'in_section' declared here
} in_section = no_section;
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/variable_section/src/varasm.c:1105:6: error: use of undeclared identifier 'in_section_0'; did you mean 'in_section'?
if ( in_section_0 == in_data ) 
     ^~~~~~~~~~~~
     in_section
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/variable_section/src/varasm.c:205:3: note: 'in_section' declared here
} in_section = no_section;
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/variable_section/src/varasm.c:1126:6: error: use of undeclared identifier 'in_section_0'; did you mean 'in_section'?
if ( in_section_0 == in_const ) 
     ^~~~~~~~~~~~
     in_section
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/variable_section/src/varasm.c:205:3: note: 'in_section' declared here
} in_section = no_section;
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/variable_section/src/varasm.c:1130:1: error: use of undeclared identifier 'in_section_0'; did you mean 'in_section'?
in_section_0 = in_const; 
^~~~~~~~~~~~
in_section
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/variable_section/src/varasm.c:205:3: note: 'in_section' declared here
} in_section = no_section;
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/variable_section/src/varasm.c:1137:31: error: use of undeclared identifier 'machine_mode'
mergeable_constant_section( ( machine_mode)LOBYTE( decl->block.supercontext), v4, 0); 
                              ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/variable_section/src/obj/varasm.o] Error 1
